# GGXrdReplayTakeover

./: .gitmodules  CMakeLists.txt  README.md
docs/: GuiltyGearXrd.CT  memory-offsets.txt
injector/: main.cpp
load-test/: main.cpp
replay-controller/: asw-engine.cpp  asw-engine.h  audio.cpp  audio.h  common.cpp  common.h  entity.cpp  entity.h  game-mode-controller.cpp  game-mode-controller.h  input-manager.cpp  input-manager.h  input.cpp  input.h  main.cpp  memory-wrapper.cpp  memory-wrapper.h  pause-menu.cpp  pause-menu.h  profiling.h  replay-controller.cpp  replay-controller.h  replay-hud.cpp  replay-hud.h  replay-manager.cpp  replay-manager.h  replay-mods.cpp  replay-mods.h  replay-record.cpp  replay-record.h  save-state.cpp  save-state.h  training-controller.cpp  training-controller.h  xrd-module.cpp  xrd-module.h
